[package]
name = "treevolution"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simulation of the evolution of treelike structures in a cellular automata"

[lib]
name = "treevolution"

[[bin]]
name = "treevolution_viewer"
path = "src/main.rs"

[dependencies]
macroquad = "0.4.13"
rand = "0.9.0-beta.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"


